set up svm classifier based on libsvm

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -1,2 +1,3 @@
-add_executable_by_name(linear_ridge_regression)
-add_executable_by_name(cross_validation)
+add_executable_by_name(linear_ridge_regression_example)
+add_executable_by_name(cross_validation_example)
+add_executable_by_name(lib_svm_example)
