--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -2,3 +2,4 @@ add_executable_by_name(linear_ridge_regression_example)
 add_executable_by_name(cross_validation_example)
 add_executable_by_name(lib_svm_example)
 add_executable_by_name(support_vector_classifier_example)
+add_executable_by_name(multiclass_lib_svm_example)
