add label struct, let model to know loss function, refactor code style, use g++-4.9, get rid of unsigned and signed comparesion warning, etc

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_executable_by_name(linear_ridge_regression_example)
-add_executable_by_name(cross_validation_example)
+#add_executable_by_name(cross_validation_example)
 add_executable_by_name(lib_svm_example)
+add_executable_by_name(linear_ridge_regression_example)
 add_executable_by_name(support_vector_classifier_example)
 add_executable_by_name(multiclass_lib_svm_example)
