--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -4,3 +4,4 @@ add_executable_by_name(multiclass_lib_svm_example)
 add_executable_by_name(cross_validation_example)
 add_executable_by_name(linear_logistic_regression_example)
 add_executable_by_name(tree_classifier_example)
+add_executable_by_name(bagging_classifier_example)
