add TreeRegressor model, templated internal tree class and criterion.

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -6,3 +6,4 @@ add_executable_by_name(linear_logistic_regression_example)
 add_executable_by_name(tree_classifier_example)
 add_executable_by_name(bagging_classifier_example)
 add_executable_by_name(random_forest_classifier_example)
+add_executable_by_name(tree_regressor_example)
