first implementation of gradient boosting regressor.

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -7,3 +7,4 @@ add_executable_by_name(tree_classifier_example)
 add_executable_by_name(bagging_classifier_example)
 add_executable_by_name(random_forest_classifier_example)
 add_executable_by_name(tree_regressor_example)
+add_executable_by_name(gradient_boosting_regressor_example)
